// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextGroup mount render correctly 1`] = `
.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 14px;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c0 {
  text-align: justify;
}

.c0 > * {
  display: inline;
  margin-right: 5px;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <TextGroup
    align="justify"
    inline={true}
  >
    <styled.div
      align="justify"
      inline={true}
    >
      <div
        className="c0"
      >
        <Texts>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="14px"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="14px"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="14px"
              >
                This is my first text. This is my first text. This is my first text. This is my first text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="14px"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="14px"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="14px"
              >
                This is my second text. This is my second text. This is my second text. This is my second text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="14px"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="14px"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="14px"
              >
                This is my third text. This is my third text. This is my third text. This is my third text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="14px"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="14px"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="14px"
              >
                This is my fourth text. This is my fourth text. This is my fourth text. This is my fourth text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="14px"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="14px"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="14px"
              >
                This is my fifth text. This is my fifth text. This is my fifth text. This is my fifth text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="14px"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="14px"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="14px"
              >
                This is my sixth text. This is my sixth text. This is my sixth text. This is my sixth text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="14px"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="14px"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="14px"
              >
                This is my seventh text. This is my seventh text. This is my seventh text. This is my seventh text.
              </span>
            </styled.span>
          </Text>
        </Texts>
      </div>
    </styled.div>
  </TextGroup>
</ThemeProvider>
`;

exports[`TextGroup mount render correctly with align 1`] = `
.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 14px;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c0 {
  text-align: right;
}

.c0 > * {
  display: inline;
  margin-right: 5px;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <TextGroup
    align="right"
    inline={true}
  >
    <styled.div
      align="right"
      inline={true}
    >
      <div
        className="c0"
      >
        <Texts>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="14px"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="14px"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="14px"
              >
                This is my first text. This is my first text. This is my first text. This is my first text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="14px"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="14px"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="14px"
              >
                This is my second text. This is my second text. This is my second text. This is my second text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="14px"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="14px"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="14px"
              >
                This is my third text. This is my third text. This is my third text. This is my third text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="14px"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="14px"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="14px"
              >
                This is my fourth text. This is my fourth text. This is my fourth text. This is my fourth text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="14px"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="14px"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="14px"
              >
                This is my fifth text. This is my fifth text. This is my fifth text. This is my fifth text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="14px"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="14px"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="14px"
              >
                This is my sixth text. This is my sixth text. This is my sixth text. This is my sixth text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="14px"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="14px"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="14px"
              >
                This is my seventh text. This is my seventh text. This is my seventh text. This is my seventh text.
              </span>
            </styled.span>
          </Text>
        </Texts>
      </div>
    </styled.div>
  </TextGroup>
</ThemeProvider>
`;

exports[`TextGroup mount render correctly with inline 1`] = `
.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 14px;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c0 {
  text-align: justify;
}

.c0 > * {
  display: block;
  margin-right: 0;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <TextGroup
    align="justify"
    inline={false}
  >
    <styled.div
      align="justify"
      inline={false}
    >
      <div
        className="c0"
      >
        <Texts>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="14px"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="14px"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="14px"
              >
                This is my first text. This is my first text. This is my first text. This is my first text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="14px"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="14px"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="14px"
              >
                This is my second text. This is my second text. This is my second text. This is my second text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="14px"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="14px"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="14px"
              >
                This is my third text. This is my third text. This is my third text. This is my third text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="14px"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="14px"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="14px"
              >
                This is my fourth text. This is my fourth text. This is my fourth text. This is my fourth text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="14px"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="14px"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="14px"
              >
                This is my fifth text. This is my fifth text. This is my fifth text. This is my fifth text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="14px"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="14px"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="14px"
              >
                This is my sixth text. This is my sixth text. This is my sixth text. This is my sixth text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="14px"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="14px"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="14px"
              >
                This is my seventh text. This is my seventh text. This is my seventh text. This is my seventh text.
              </span>
            </styled.span>
          </Text>
        </Texts>
      </div>
    </styled.div>
  </TextGroup>
</ThemeProvider>
`;
